[gd_scene load_steps=6 format=3 uid="uid://d237okerrpwmg"]

[ext_resource type="Script" path="res://Godrays/god_rays.gd" id="1_2wsbw"]
[ext_resource type="Shader" path="res://Godrays/LightRays.gdshader" id="2_3ppt4"]
[ext_resource type="Script" path="res://Godrays/color_rect_light_rays.gd" id="3_xqx02"]

[sub_resource type="ViewportTexture" id="ViewportTexture_loqrf"]
viewport_path = NodePath("GodRayStuff/SubViewportContainer/SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_obxc4"]
resource_local_to_scene = true
shader = ExtResource("2_3ppt4")
shader_parameter/ray_length = 1.0
shader_parameter/ray_intensity = 1.0
shader_parameter/light_source_scale = 1.0
shader_parameter/light_source_feather = 2.0
shader_parameter/noise_strength = 0.2
shader_parameter/light_source_pos = Vector2(0, 0)
shader_parameter/light_source_dir = Vector3(0.5, -1, 0.25)
shader_parameter/camera_dir = Vector3(-0.5, 1, -0.25)
shader_parameter/subviewport_tex = SubResource("ViewportTexture_loqrf")

[node name="GodRays" type="Node"]
script = ExtResource("1_2wsbw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect_LightRays" type="ColorRect" parent="Control"]
material = SubResource("ShaderMaterial_obxc4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_xqx02")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
visibility_layer = 0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -216.0
offset_right = 384.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_clear_mode = 2
render_target_update_mode = 4

[node name="Camera3D_Viewport" type="Camera3D" parent="SubViewportContainer/SubViewport"]
